--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,15 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
 .imageipon {
     background-color: whitesmoke;
 }
+h1 {
+     color: #63b7af ;
+}
+div {
+    background-color: #1b1b2f;
+padding-bottom: 20px;
+padding-top: 20px;
+}
+p{
+    font: 1em sans-serif italic;
+    color: darkolivegreen;
+}
